# reverse_tokscale

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.big.yml  docker-compose.yml
configs/: heavy-human-like.yaml
src/: allocator.rs  claude_writer.rs  config.rs  direct_submit_payload.rs  events.rs  humanizer.rs  lib.rs  main.rs  orchestrator.rs  resume.rs  state.rs  submit_payload.rs  submit_state.rs  timeline.rs  validator.rs
tests/: allocator_tests.rs  config_tests.rs  docker_e2e_smoke.sh  humanizer_tests.rs  orchestrator_integration_tests.rs  submit_tool_integration_tests.rs  timeline_tests.rs  validator_tests.rs
